# playdate-hello-world-meson

./: .gitignore  README.md  meson.build  meson.options
cross/: playdate.txt
scripts/: generate-pdx.sh  generate-sim-pdx.sh
src/: main.c
